syntax = "proto3";

import "google/protobuf/empty.proto";

option csharp_namespace = "AuthServer.Shared.Admin";

service Users {
  rpc ListUsers (google.protobuf.Empty) returns (UserListReply);
}

message UserListReply {
  repeated User users = 1;
}

message User {
  string id = 1;
  string name = 2;
}
